style.css
body{
margin:0;
font-family:Poppins;
background:#f6f7fb;
color:#333;
}


/* LOGIN PAGE */

.login-body{

background-image:url("images/daythree-bg.jpeg");
background-size:cover;
background-position:center;
height:100vh;
display:flex;
justify-content:center;
align-items:center;

}

.login-overlay{

background:rgba(0,0,0,0.35);
width:100%;
height:100%;
display:flex;
align-items:center;
justify-content:center;

}

.login-card{

background:white;
padding:45px;
border-radius:12px;
width:320px;
text-align:center;

box-shadow:0 15px 40px rgba(0,0,0,0.2);

}

.login-card h1{
margin-bottom:5px;
color:#1f4ed8;
}

.login-card p{
color:#666;
margin-bottom:25px;
}

.login-card input{

width:100%;
padding:12px;
margin-bottom:15px;

border-radius:6px;
border:1px solid #ccc;

font-size:14px;

box-sizing:border-box;

}

.login-card button{

width:100%;
padding:12px;
border:none;

background:linear-gradient(90deg,#1f4ed8,#4f46e5);

color:white;
font-weight:600;

border-radius:6px;
cursor:pointer;

transition:0.3s;

box-sizing:border-box;

}

.login-card button:hover{

transform:translateY(-2px);
box-shadow:0 6px 15px rgba(0,0,0,0.2);

}

.login-logo{
width:160px;
margin-bottom:15px;
}

/* NAVBAR */

.navbar{

display:flex;
justify-content:space-between;
align-items:center;

padding:20px 60px;

background:white;

box-shadow:0 2px 10px rgba(0,0,0,0.08);

}

.logo img{
height:45px;
}

.nav-quote{
font-weight:500;
color:#666;
font-style:italic;
}

.nav-right{
display:flex;
align-items:center;
gap:20px;
}

/* HERO SECTION */

.hero{

background-image:url("images/daythree-bg.jpeg");

background-size:cover;
background-position:center;

height:520px;

display:flex;
align-items:center;
justify-content:center;

}

.hero-overlay{

background:rgba(0,0,0,0.45);

padding:50px;

border-radius:12px;

text-align:center;

max-width:750px;

color:white;

}

.hero-overlay h1{

font-size:40px;

margin-bottom:15px;

font-weight:600;

}

.hero-overlay p{

font-size:17px;

line-height:1.6;

}


/* ABOUT */

.about-section{

display:flex;

gap:120px;

padding:120px 10%;

align-items:center;

justify-content:space-between;

max-width: 1400px;

margin: auto;

}

.about-text{

max-width:680px;

font-size:17px;

line-height: 1.9;

color: #555;

}

.about-text h2{

margin-bottom:15px;

}

.about-text p{

line-height:1.6;

color:#555;

text-align: justify;

margin-bottom:22px;

}

.about-image img{

width:520px;

border-radius:14px;

box-shadow:0 15px 40px rgba(0,0,0,0.2);

}

.section-title{

text-align:center;

margin-top:50px;
margin-bottom: 20px;

font-size:40px;

font-weight:600;

}

/* FEATURE CARDS */

.features{

display:flex;

justify-content:center;

gap:80px;

padding:60px 10% 100px;

flex-wrap:wrap;

}

.feature-card{

background:linear-gradient(145deg,#c2185b,#1e3a8a);

padding:40px 30px;

width:260px;
height:360px;

border-radius:16px;

box-shadow:0 12px 35px rgba(0,0,0,0.2);

transition:0.3s;

text-align:center;

color:white;

display:flex;
flex-direction:column;
justify-content:center;

}

.feature-card:hover{

transform:translateY(-6px);

box-shadow:0 18px 40px rgba(0,0,0,0.15);

}

.feature-card h3{

margin-bottom:15px;

color:rgb(202, 170, 139);

font-size:20px;

}

.feature-card p{

color:rgba(255,255,255,0.9);

font-size:15px;

line-height:1.7;

}

/* AI ASSISTANT */

.assistant-section{

text-align:center;

padding:80px 60px;

background:linear-gradient(180deg,#f6f7fb,#ffffff)

}

.assistant-section h2{

margin-bottom:25px;

}

#anam-container{

position: relative;    

width:700px;

margin:auto;

border-radius:16px;

overflow:hidden;

box-shadow:0 15px 40px rgba(0,0,0,0.25);

}

#anam-container anam-agent{
width:100%;
height:100%;
display:block;
}

.ai-title{

font-size:28px;

margin-bottom:25px;

}

/* LOGOUT BUTTON */

.logout-btn{

background:none;
border:none;
cursor:pointer;

display:flex;
align-items:center;
justify-content:center;

}

.logout-btn img{

height:24px;
opacity:0.8;

transition:0.3s;

}

.logout-btn img:hover{

opacity:1;
transform:scale(1.1);

}

/* AVATAR WATERMARK */

#anam-container{

width: 620px;    
position:relative;


}

#anam-container::before{

content:"";

position:absolute;

top:0;
left:0;
right:0;
bottom:0;
width: 100%;
height: 55px;

/* thickness of mask */


border-radius:16px;

z-index:9998;

pointer-events:none;

}

#anam-container::after{

content:"";

position:absolute;
top:10px;
left:12px;

width:120px;
height:40px;

background-image:url("images/daythree-watermark_whitebg.jpeg");
background-size:contain;
background-repeat:no-repeat;

opacity:1;

pointer-events:none;

z-index:9999;
}

.ai-wrapper{

max-width:1200px;
margin:40px auto;

display:grid;
grid-template-columns: 260px 620px 260px;

column-gap:28px;
align-items:center;

}

.questions-left,
.questions-right{

display:flex;
flex-direction:column;
gap:16px;



}

.questions-left{
justify-self:end;
margin-right: 7px;
}

.questions-right{
justify-self:start;
margin-left: 7px;
}

.question{

width:220px;

background: linear-gradient(135deg,#9b917d,#af9b6f);

color:white;

padding:12px 14px;

border-radius:10px;

font-size:14px;

text-align:center;

box-shadow:0 6px 14px rgba(0,0,0,0.15);

cursor:pointer;

transition:0.25s;

}

.question:hover{

transform:translateY(-3px);

box-shadow:0 10px 20px rgba(0,0,0,0.25);

}

#anam-container{
position:relative;
}

/* FULLSCREEN BUTTON */

.fullscreen-icon{

position:absolute;
top:12px;
right:12px;

width:38px;
height:38px;

background:rgba(0,0,0,0.7);
color:white;

border:none;
border-radius:50%;

font-size:18px;
cursor:pointer;

display:flex;
align-items:center;
justify-content:center;

z-index:1000;
}

/* EXIT BUTTON */

.fullscreen-exit{

position:absolute;
top:12px;
right:12px;

width:38px;
height:38px;

background:rgba(0,0,0,0.8);
color:white;

border:none;
border-radius:50%;

font-size:18px;
cursor:pointer;

display:none;

align-items:center;
justify-content:center;

z-index:1000;
}

